src/test/ui/closures/closure-reform-bad.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/closure-reform-bad.rs:11:5
   |
LL |     call_bare(f)
   |     ^^^^^^^^^^-^
   |               |
   |               expected `for<'r> fn(&'r str)`, found `[closure@$DIR/closure-reform-bad.rs:10:13: 10:50]`
   |
note: function defined here
  --> $DIR/closure-reform-bad.rs:4:4
   |
LL | fn call_bare(f: fn(&str)) {
   |    ^^^^^^^^^ -----------
help: provide an argument of the correct type
   |
LL |     call_bare({for<'r> fn(&'r str)})
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
